--- a/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.build_log.htm
+++ b/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.build_log.htm
@@ -16,9 +16,9 @@ Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
 Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.29.0.0
-Dialog DLL:      DCM.DLL V1.17.3.0
+Dialog DLL:      DARMSTM.DLL V1.68.0.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
-Dialog DLL:      TCM.DLL V1.36.5.0
+Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 C:\Users\Mohamed Mehery\Documents\GitHub\Custom_bootloader\custom_bootloader\custom_bootloader\MDK-ARM\custom_bootloader.uvprojx
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
