--- a/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.build_log.htm
+++ b/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.build_log.htm
@@ -27,16 +27,32 @@ Project File Date:  06/12/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'custom_bootloader'
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_msp.c...
 compiling main.c...
 ../Src/main.c(57): warning:  #1295-D: Deprecated declaration go_to_bootloader - give arg types
   void go_to_bootloader();
 ../Src/main.c(58): warning:  #1295-D: Deprecated declaration go_to_user_app - give arg types
   void go_to_user_app();
-../Src/main.c(242): warning:  #513-D: a value of type "void *" cannot be assigned to an entity of type "void (*)(void)"
-  	user_app_code = (void *) (0x08001004) ;	
+../Src/main.c(234): warning:  #513-D: a value of type "void *" cannot be assigned to an entity of type "void (*)(void)"
+  	user_app_code = (void *) (reset_handler_value) ;
 ../Src/main.c: 3 warnings, 0 errors
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=3652 RO-data=292 RW-data=16 ZI-data=1088  
+Program Size: Code=3592 RO-data=292 RW-data=16 ZI-data=1088  
 FromELF: creating hex file...
 "custom_bootloader\custom_bootloader.axf" - 0 Error(s), 3 Warning(s).
 
@@ -61,7 +77,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:38
 </pre>
 </body>
 </html>
