--- a/custom_bootloader/User app/MDK-ARM/Blinking_led/Blinking_led.build_log.htm
+++ b/custom_bootloader/User app/MDK-ARM/Blinking_led/Blinking_led.build_log.htm
@@ -18,16 +18,15 @@ Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.29.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
-Dialog DLL:      TCM.DLL V1.36.5.0
+Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 C:\Users\Mohamed Mehery\Documents\GitHub\Custom_bootloader\custom_bootloader\User app\MDK-ARM\Blinking_led.uvprojx
-Project File Date:  06/12/2020
+Project File Date:  06/19/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Blinking_led'
-compiling main.c...
 linking...
 Program Size: Code=2572 RO-data=284 RW-data=16 ZI-data=1024  
 FromELF: creating hex file...
@@ -54,7 +53,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:08
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
