--- a/custom_bootloader/User app/MDK-ARM/Blinking_led/Blinking_led.build_log.htm
+++ b/custom_bootloader/User app/MDK-ARM/Blinking_led/Blinking_led.build_log.htm
@@ -27,10 +27,14 @@ Project File Date:  06/19/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Blinking_led'
+compiling main.c...
+../Src/main.c(188): warning:  #68-D: integer conversion resulted in a change of sign
+  		return -1 ;
+../Src/main.c: 1 warning, 0 errors
 linking...
 Program Size: Code=2572 RO-data=284 RW-data=16 ZI-data=1024  
 FromELF: creating hex file...
-"Blinking_led\Blinking_led.axf" - 0 Error(s), 0 Warning(s).
+"Blinking_led\Blinking_led.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -53,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:07
 </pre>
 </body>
 </html>
