--- a/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.htm
+++ b/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [custom_bootloader\custom_bootloader.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image custom_bootloader\custom_bootloader.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Sat Jun 20 20:10:31 2020
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Mon Jun 22 12:08:15 2020
 <BR><P>
 <H3>Maximum Stack Usage =        184 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -398,14 +398,14 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;go_to_bootloader
 </UL>
 
-<P><STRONG><a name="[52]"></a>BL_handle_getVersion_cmd</STRONG> (Thumb, 90 bytes, Stack size 24 bytes, main.o(i.BL_handle_getVersion_cmd))
+<P><STRONG><a name="[52]"></a>BL_handle_getVersion_cmd</STRONG> (Thumb, 84 bytes, Stack size 24 bytes, main.o(i.BL_handle_getVersion_cmd))
 <BR><BR>[Stack]<UL><LI>Max Depth = 184<LI>Call Chain = BL_handle_getVersion_cmd &rArr; print_msg &rArr; HAL_UART_Transmit &rArr; UART_WaitOnFlagUntilTimeout
 </UL>
-<BR>[Calls]<UL><LI><a href="#[53]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_Transmit
-<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_msg
+<BR>[Calls]<UL><LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_msg
 <LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bootloader_verify_CRC
 <LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bootloader_send_nack
 <LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bootloader_send_ack
+<LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BootLoader_UART_Write_Data
 </UL>
 <BR>[Called By]<UL><LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;go_to_bootloader
 </UL>
@@ -415,7 +415,8 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[53]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_UART_Transmit
 </UL>
-<BR>[Called By]<UL><LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BL_handle_getHelp_cmd
+<BR>[Called By]<UL><LI><a href="#[52]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BL_handle_getVersion_cmd
+<LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BL_handle_getHelp_cmd
 <LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BL_handle_getCID_cmd
 </UL>
 
@@ -589,7 +590,6 @@ Global Symbols
 <LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bootloader_send_nack
 <LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bootloader_send_ack
 <LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BootLoader_UART_Write_Data
-<LI><a href="#[52]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BL_handle_getVersion_cmd
 </UL>
 
 <P><STRONG><a name="[2]"></a>HardFault_Handler</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, stm32f1xx_it.o(i.HardFault_Handler))
