--- a/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.build_log.htm
+++ b/custom_bootloader/custom_bootloader/MDK-ARM/custom_bootloader/custom_bootloader.build_log.htm
@@ -27,7 +27,22 @@ Project File Date:  06/20/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'custom_bootloader'
-"custom_bootloader\custom_bootloader.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Src/main.c(91): warning:  #1295-D: Deprecated declaration go_to_bootloader - give arg types
+  void go_to_bootloader();
+../Src/main.c(92): warning:  #1295-D: Deprecated declaration go_to_user_app - give arg types
+  void go_to_user_app();
+../Src/main.c(477): warning:  #144-D: a value of type "void *" cannot be used to initialize an entity of type "void (*)(void)"
+  			void (*letsjumb)(void) = (void *) gotoaddress;
+../Src/main.c(477): warning:  #177-D: variable "letsjumb"  was declared but never referenced
+  			void (*letsjumb)(void) = (void *) gotoaddress;
+../Src/main.c(576): warning:  #513-D: a value of type "void *" cannot be assigned to an entity of type "void (*)(void)"
+  	user_app_code = (void *) (reset_handler_value) ;
+../Src/main.c: 5 warnings, 0 errors
+linking...
+Program Size: Code=8928 RO-data=292 RW-data=32 ZI-data=1352  
+FromELF: creating hex file...
+"custom_bootloader\custom_bootloader.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +65,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
